pycharm_fcc_projects/random_quote_generator/random-quote-machine.css
/* Titles/Headlines/Fonts */

h3 {
    color: white;
    font-family:  Helvetica Neue,Helvetica,Arial,sans-serif;
    font-size: 1em;
}

/* Button */

.get-btn {
    color: white;
    font-family:  Helvetica Neue,Helvetica,Arial,sans-serif;
    background: black;
    font-size: 1.5em;
    font-weight: 2em;
    height: 100px;
    border-radius: 10px;
    border-color: #00FF00;
    padding: 10px;
    margin: 200px;

}

.tweet-btn {
    color: white;
    font-family:  Helvetica Neue,Helvetica,Arial,sans-serif;
    background: blue;
    font-size: 1.5em;
    font-weight: 2em;
    height: 100px;
    border-radius: 10px;
    border-color: #00FF00;
    padding: 10px;
    margin: 140px;

}



/* Header & Footer */
header {
    color: white;
    font-family:  Helvetica Neue,Helvetica,Arial,sans-serif;
    font-size: 2em;
    font-weight: bold;

}

footer {
    color: white;
    font-family:  Helvetica Neue,Helvetica,Arial,sans-serif;
    font-size: 1em;
    font-weight: bold;
}


/* Body Background */
body {
    /*background-image: url("img-quote-machine/rickmorty_bg.jpg");*/
    background: black;
}

/* Image Background */
#wrapper {

 /* background-image sourced from hulu.com */
    background-image: url("img-quote-machine/rickmorty_bg.jpg");
    background-repeat: no-repeat;
    max-height: 100%;
    height: 300px;
    padding: 100px;
    position: left;
    opacity: 0.85;
}

